# desk_gpt

./: .editorconfig  .gitignore  .tool-versions  README.md  devbox.json  process-compose.yml  pyproject.toml  taskfile.yml
app/: bun.lockb  package-lock.json  package.json  svelte.config.js  tsconfig.json
app/src/: app.css
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/src/: main.rs
app/src/routes/: +page.svelte  index.svelte
backend/: pyproject.toml  run_django.py
backend/chat/: urls.py  views.py
backend/chatgpt_backend/: asgi.py  urls.py  wsgi.py
chatgpt_backend/chat/: serializers.py
chatgpt_backend/chatgpt_backend/: settings.py
chatgpt_backend/templates/: base.html
taskfiles/: poetry.yml
